--- a/src/style.scss
+++ b/src/style.scss
@@ -304,6 +304,7 @@ $primaryColor: #4527a4;
           font-size: 0.75rem;
           line-height: 1rem;
           margin: 0;
+          text-transform:capitalize !important;
         }
       }
     }
@@ -466,6 +467,8 @@ $primaryColor: #4527a4;
         font-size: 0.875rem;
         line-height: 1.25rem;
         margin: 0;
+                  text-transform:capitalize !important;
+
       }
 
       .album-cover {
